WindGroup Dev/src/objects/Payment_Voucher__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Foreign__c</fullName>
        <label>Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Amount_Foreign__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit</label>
        <referenceTo>Deposit__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <formula>if(Default_Amount_Foreign__c != 0, ((Amount_Foreign__c * -1) -  (Default_Amount_Foreign__c * -1)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain/Loss (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JV_Status__c</fullName>
        <label>JV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JV_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Id__c</fullName>
        <formula>Lease__r.Id</formula>
        <label>Lease Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Foreign__c</fullName>
        <formula>Amount_Foreign__c -  Refunded_Amount_Foreign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Local__c</fullName>
        <formula>Amount_Local__c -  Refunded_Amount_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <formula>Amount__c -  Refunded_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Offset Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Voucher</label>
        <referenceTo>Payment_Voucher__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>IF(NOT(ISBLANK( Lease__r.Property__r.Name)), Lease__r.Property__r.Name, 
 Invoice__r.Lease__r.Property__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Payment Vouchers</relationshipLabel>
        <relationshipName>Payment_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Mode__c</fullName>
        <label>Refund Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Offset Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refunded_Amount_Foreign__c</fullName>
        <label>Refunded Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount_Local__c</fullName>
        <label>Refunded Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refunded_Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <formula>IF(NOT(ISBLANK( Lease__r.Tenant__r.Id)), CASESAFEID(Lease__r.Tenant__r.Id), 
CASESAFEID ( Invoice__r.Lease__r.Tenant__r.Id))</formula>
        <label>Tenant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Invoice Receipt</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Refund_Mode__c</columns>
        <columns>Currency_Code__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Voucher No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>